--- a/index.html
+++ b/index.html
@@ -42,7 +42,144 @@
             </ul>
         </div>
     </nav>
+    <section class="container">
+        <div class="row">
+            <div class="col" id="prop">
+                <h5>Featured Properties</h5>
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block w-60" src="./css/imgs/Semi-detached  Bungalow.jpg" alt="First slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <p>Price: #2000.00</p>
+                            </div>
+                            <div>
+                                <p>Parcel of Land </p>
+                                <p>For sale</p>
+                                <i class="fa fa-bed"></i><i class="fa fa-bath"><i class="fa fa-toilet"></i>
+                                <button class="btn btn-primary form-control">View Property</button>   
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-60" src="./css/imgs/Parcel of land.jpg" alt="Second slide">
+                            <div class="carousel-caption d-none d-md-block">
+                            <p>Price: #4500.00</p>
+                            </div>
+                            <div>
+                                <p>4 Bedroom Detached Bungalow</p>
+                                <p>For sale</p>
+                                <i class="fa fa-bed"></i><i class="fa fa-bath"><i class="fa fa-toilet"></i>
+                                <button class="btn btn-primary form-control">View Property</button>   
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-60" src="./css/imgs/3 Bedroom Bungalow.jpg" alt="Third slide">
+                            <div class="carousel-caption d-none d-md-block">
+                            <p>Price: #3000.00</p>
+                            </div>
+                            <div>
+                                <p>2 Bedroom Detached Bungalow</p>
+                                <p>For rent</p>
+                                <i class="fa fa-bed"></i><i class="fa fa-bath"><i class="fa fa-toilet"></i>
+                                <button class="btn btn-primary form-control">View Property</button>   
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-60" src="./css/imgs/4 Bedroom Bungalow.jpg" alt="Fouth slide">
+                            <div class="carousel-caption d-none d-md-block">
+                            <p>Price: #1500.00</p>
+                            </div>
+                            <div>
+                                <p>5 Bedroom Detached Bungalow</p>
+                                <p>For sale</p>
+                                <i class="fa fa-bed"></i><i class="fa fa-bath"><i class="fa fa-toilet"></i>
+                                <button class="btn btn-primary form-control">View Property</button>   
+                            </div>
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col" id="ren">
+                <i class="fa fa-list-alt"></i>
+                <h5>Make A  Request</h5>
+                <p>Real estate agents will contact you as soon as they 
+                    get a property that suit your specification</p>
+            </div>
+            <div class="col">
+                <span><i class="fa fa-search"></i></span>
+                <h5>Find A Real Estate Agent</h5>
+                <p>Find your next agent among our numerous partners</p>
+            </div>
+            <div class="col">
+                <span><i class="fa fa-newspaper"></i></span>
+                <h5>Weekly Newsletter</h5>
+                <p>Read the latest in property news on this blog</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col" id="agents">
+            <h5>Featured Agents</h5>
+                <marquee behavior=scroll direction="left" scrollamount="2">
+                    <div class="agents" style="display:flex;">
+                        <div class="">
+                            <i class="fa fa-home" style="font-size: 50px;"></i>
+                            <h6>Okigwe Homes</h6>
+                        </div>
+                        <div class="">
+                            <i class="fa fa-home" style="font-size: 50px;"></i>
+                                <h6>Desireable Properties</h6>
+                        </div>
+                        <div class="">
+                            <i class="fa fa-home" style="font-size: 50px;"></i>
+                            <h6>Vital Properties</h6>
+                        </div>
+                        <div class="">
+                            <i class="fa fa-home" style="font-size: 50px;"></i>
+                            <h6>Sweet Homes</h6>
+                        </div>
+                        <div class="">
+                            <i class="fa fa-home" style="font-size: 50px;"></i>
+                            <h6>Desireable Properties</h6>
+                        </div>
+                        <div class="">
+                            <i class="fa fa-home" style="font-size: 50px;"></i>
+                            <h6>Desireable Properties</h6>
+                        </div>
+                        <div class="">
+                            <i class="fa fa-home" style="font-size: 50px;"></i>
+                            <h6>Desireable Properties</h6>
+                        </div>
+                        <div class="">
+                            <i class="fa fa-home" style="font-size: 50px;"></i>
+                            <h6>Desireable Properties</h6>
+                        </div>
+                        <div class="">
+                            <i class="fa fa-home" style="font-size: 50px;"></i>
+                            <h6>Desireable Properties</h6>
+                        </div>
+                    </div>
+                </marquee>
+            </div>    
+        </div>
 
+
+    </section>
     <script src="./js/jquery-3.4.1.js"></script>
     <script src="./js/bootstrap.js"></script>
     <script src="./js/main.js"></script>
