--- a/index.html
+++ b/index.html
@@ -115,18 +115,18 @@
             </div>
         </div>
         <div class="row">
-            <div class="col" id="ren">
+            <div class="col-md-4" id="ren">
                 <i class="fa fa-list-alt"></i>
                 <h5>Make A  Request</h5>
                 <p>Real estate agents will contact you as soon as they 
                     get a property that suit your specification</p>
             </div>
-            <div class="col">
+            <div class="col-md-4">
                 <span><i class="fa fa-search"></i></span>
                 <h5>Find A Real Estate Agent</h5>
                 <p>Find your next agent among our numerous partners</p>
             </div>
-            <div class="col">
+            <div class="col-md-4">
                 <span><i class="fa fa-newspaper"></i></span>
                 <h5>Weekly Newsletter</h5>
                 <p>Read the latest in property news on this blog</p>
@@ -134,42 +134,42 @@
         </div>
         <div class="row">
             <div class="col" id="agents">
-            <h5>Featured Agents</h5>
-                <marquee behavior=scroll direction="left" scrollamount="2">
+            <h5 class="text-center">Featured Agents</h5>
+                <marquee behavior=scroll direction="left" scrollamount="0.5">
                     <div class="agents" style="display:flex;">
-                        <div class="">
+                        <div class="m-2">
                             <i class="fa fa-home" style="font-size: 50px;"></i>
                             <h6>Okigwe Homes</h6>
                         </div>
-                        <div class="">
+                        <div class="m-2">
                             <i class="fa fa-home" style="font-size: 50px;"></i>
                                 <h6>Desireable Properties</h6>
                         </div>
-                        <div class="">
+                        <div class="m-2">
                             <i class="fa fa-home" style="font-size: 50px;"></i>
                             <h6>Vital Properties</h6>
                         </div>
-                        <div class="">
+                        <div class="m-2">
                             <i class="fa fa-home" style="font-size: 50px;"></i>
                             <h6>Sweet Homes</h6>
                         </div>
-                        <div class="">
+                        <div class="m-2">
                             <i class="fa fa-home" style="font-size: 50px;"></i>
                             <h6>Desireable Properties</h6>
                         </div>
-                        <div class="">
+                        <div class="m-2">
                             <i class="fa fa-home" style="font-size: 50px;"></i>
                             <h6>Desireable Properties</h6>
                         </div>
-                        <div class="">
+                        <div class="m-2">
                             <i class="fa fa-home" style="font-size: 50px;"></i>
                             <h6>Desireable Properties</h6>
                         </div>
-                        <div class="">
+                        <div class="m-2">
                             <i class="fa fa-home" style="font-size: 50px;"></i>
                             <h6>Desireable Properties</h6>
                         </div>
-                        <div class="">
+                        <div class="m-2">
                             <i class="fa fa-home" style="font-size: 50px;"></i>
                             <h6>Desireable Properties</h6>
                         </div>
