--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Perfect Property | Home</title>
+    <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/fontawesome-free-5.10.1-web/css/all.css">
     <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="./css/main.css">
@@ -31,155 +32,97 @@
                 <a class="nav-link" href="#">Agents</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Post a property [FREE]</a>
+                <a class="nav-link btn-action my-1 text-center my-md-0" href="#">Post a property <span class="highlight p-1"> FREE </span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Login</a>
+                <a class="nav-link btn-action my-1 text-center my-md-0" href="#">Login</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Sign Up</a>
+                <a class="nav-link btn-action my-1 text-center my-md-0" href="#">Sign Up</a>
             </li>
             </ul>
         </div>
     </nav>
-    <section class="container">
-        <div class="row">
-            <div class="col" id="prop">
-                <h5>Featured Properties</h5>
-                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-                    </ol>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img class="d-block w-60" src="./css/imgs/Semi-detached  Bungalow.jpg" alt="First slide">
-                            <div class="carousel-caption d-none d-md-block">
-                                <p>Price: #2000.00</p>
+    <section id="banner" class="container-fluid">
+        <div id="banner__content" class="container-fluid">
+            <div class="row text-white">
+                <div class="col text-center">
+                    <h1>find your new home...</h1>
+                    <p>Search properties for sale and rent in Nigeria</p>
+                </div>
+            </div>
+            <div class="row mt-5">
+                <div class="col text-center">
+                    <form action="" method="post" class="col-md-8 m-auto" id="search-field">
+                        <div class="row w-50 m-auto" id="choice">
+                            <div class="col-4">
+                                <button class="btn form-control bg-light">BUY</button>
                             </div>
-                            <div>
-                                <p>Parcel of Land </p>
-                                <p>For sale</p>
-                                <i class="fa fa-bed"></i><i class="fa fa-bath"><i class="fa fa-toilet"></i>
-                                <button class="btn btn-primary form-control">View Property</button>   
+                            <div class="col-4">
+                                <button class="btn form-control bg-light">SHORT LET</button>
+                            </div>
+                            <div class="col-4">
+                                <button class="btn form-control bg-light">RENT</button>
                             </div>
                         </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-60" src="./css/imgs/Parcel of land.jpg" alt="Second slide">
-                            <div class="carousel-caption d-none d-md-block">
-                            <p>Price: #4500.00</p>
+                        <div class="row w-50 m-auto text-white" id="selection-indicator">
+                            <div class="col-4">
+                                T
                             </div>
-                            <div>
-                                <p>4 Bedroom Detached Bungalow</p>
-                                <p>For sale</p>
-                                <i class="fa fa-bed"></i><i class="fa fa-bath"><i class="fa fa-toilet"></i>
-                                <button class="btn btn-primary form-control">View Property</button>   
+                            <div class="col-4">
+                                T
                             </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-60" src="./css/imgs/3 Bedroom Bungalow.jpg" alt="Third slide">
-                            <div class="carousel-caption d-none d-md-block">
-                            <p>Price: #3000.00</p>
-                            </div>
-                            <div>
-                                <p>2 Bedroom Detached Bungalow</p>
-                                <p>For rent</p>
-                                <i class="fa fa-bed"></i><i class="fa fa-bath"><i class="fa fa-toilet"></i>
-                                <button class="btn btn-primary form-control">View Property</button>   
+                            <div class="col-4">
+                                T
                             </div>
                         </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-60" src="./css/imgs/4 Bedroom Bungalow.jpg" alt="Fouth slide">
-                            <div class="carousel-caption d-none d-md-block">
-                            <p>Price: #1500.00</p>
+                        <div class="row">
+                            <div class="col">
+                                <input type="text" name="search-box" class="form-control p-0" id="">
                             </div>
-                            <div>
-                                <p>5 Bedroom Detached Bungalow</p>
-                                <p>For sale</p>
-                                <i class="fa fa-bed"></i><i class="fa fa-bath"><i class="fa fa-toilet"></i>
-                                <button class="btn btn-primary form-control">View Property</button>   
+                            <div class="col-2">
+                                <select name="category" class="form-control" id="category" title="Category">
+                                    <option value="">Category</option>
+                                    <option value="">Category</option>
+                                    <option value="">Category</option>
+                                </select>
+                            </div>
+                            <div class="col-2">
+                                <select name="bedroom" class="form-control" id="bedroom" title="Bedrooms">
+                                    <option value="">bedroom</option>
+                                    <option value="">bedroom</option>
+                                    <option value="">bedroom</option>
+                                </select>
+                            </div>
+                            <div class="col-2">
+                                <select name="budget" class="form-control" id="budget" title="Your budget">
+                                    <option value="">budget</option>
+                                    <option value="">budget</option>
+                                    <option value="">budget</option>
+                                </select>
+                            </div>
+                            <div class="col-1">
+                                <button type="submit" class="form-control btn btn-dark">O></button>
                             </div>
                         </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
+                    </form>
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-4" id="ren">
-                <i class="fa fa-list-alt"></i>
-                <h5>Make A  Request</h5>
-                <p>Real estate agents will contact you as soon as they 
-                    get a property that suit your specification</p>
-            </div>
-            <div class="col-md-4">
-                <span><i class="fa fa-search"></i></span>
-                <h5>Find A Real Estate Agent</h5>
-                <p>Find your next agent among our numerous partners</p>
-            </div>
-            <div class="col-md-4">
-                <span><i class="fa fa-newspaper"></i></span>
-                <h5>Weekly Newsletter</h5>
-                <p>Read the latest in property news on this blog</p>
+        <div class="keys container">
+            <div class="row">
+                <a class="col">Shortlet Apartments</a>
+                <a class="col">Luxury Apartments</a>
+                <a class="col">What's </a>
             </div>
         </div>
-        <div class="row">
-            <div class="col" id="agents">
-            <h5 class="text-center">Featured Agents</h5>
-                <marquee behavior=scroll direction="left" scrollamount="2">
-                    <div class="agents" style="display:flex;">
-                        <div class="m-2">
-                            <i class="fa fa-home" style="font-size: 50px;"></i>
-                            <h6>Okigwe Homes</h6>
-                        </div>
-                        <div class="m-2">
-                            <i class="fa fa-home" style="font-size: 50px;"></i>
-                                <h6>Desireable Properties</h6>
-                        </div>
-                        <div class="m-2">
-                            <i class="fa fa-home" style="font-size: 50px;"></i>
-                            <h6>Vital Properties</h6>
-                        </div>
-                        <div class="m-2">
-                            <i class="fa fa-home" style="font-size: 50px;"></i>
-                            <h6>Sweet Homes</h6>
-                        </div>
-                        <div class="m-2">
-                            <i class="fa fa-home" style="font-size: 50px;"></i>
-                            <h6>Desireable Properties</h6>
-                        </div>
-                        <div class="m-2">
-                            <i class="fa fa-home" style="font-size: 50px;"></i>
-                            <h6>Desireable Properties</h6>
-                        </div>
-                        <div class="m-2">
-                            <i class="fa fa-home" style="font-size: 50px;"></i>
-                            <h6>Desireable Properties</h6>
-                        </div>
-                        <div class="m-2">
-                            <i class="fa fa-home" style="font-size: 50px;"></i>
-                            <h6>Desireable Properties</h6>
-                        </div>
-                        <div class="m-2">
-                            <i class="fa fa-home" style="font-size: 50px;"></i>
-                            <h6>Desireable Properties</h6>
-                        </div>
-                    </div>
-                </marquee>
-            </div>    
-        </div>
-
-
     </section>
+    <section class="container">
+        wbkfwbfkwef
+        fbwjfbve
+        <h1>wbfwkbfwk</h1>
+    </section>
+
     <script src="./js/jquery-3.4.1.js"></script>
     <script src="./js/bootstrap.js"></script>
     <script src="./js/main.js"></script>
