Worked on the index contents

--- a/index.html
+++ b/index.html
@@ -438,44 +438,44 @@
 <div class="container-fluid py-5" id="box4">
     <div class="row">
         <h2 class="col-12 text-light text-center" id="agent">Perfect Property Agents</h2>
-        <div class="col-md-3 d-flex align-items-center justify-content-center">
+        <div class="col-6 col-md-3 d-flex align-items-center justify-content-center">
             <a href="" class="text-center py-2">
                 <img src="css/imgs/X1-Vermont.png" class="img-fluid our_agents_logo">
             </a>
         </div>
-        <div class="col-md-3 d-flex align-items-center justify-content-center">
+        <div class="col-6 col-md-3 d-flex align-items-center justify-content-center">
             <a href="" class="text-center py-2">
                 <img class="img-fluid our_agents_logo" src="css/imgs/fine&country.png">
             </a>
         </div>
-        <div class="col-md-3 d-flex align-items-center justify-content-center">
+        <div class="col-6 col-md-3 d-flex align-items-center justify-content-center">
             <a href="" class="text-center py-2">
                 <img class="img-fluid our_agents_logo " src="css/imgs/download 1.png">
             </a>
         </div>
-        <div class="col-md-3 d-flex align-items-center justify-content-center">
+        <div class="col-6 col-md-3 d-flex align-items-center justify-content-center">
             <a href="" class="text-center py-2">
                 <img class="img-fluid our_agents_logo" src="css/imgs/homes.jpg">
             </a>
         </div>
     </div>
     <div class="row">
-        <div class="col-md-3 d-flex align-items-center justify-content-center">
+        <div class="col-6 col-md-3 d-flex align-items-center justify-content-center">
             <a href="" class="text-center py-2">
                 <img src="css/imgs/ei homes.png" class="img-fluid our_agents_logo">
             </a>
         </div>
-        <div class="col-md-3 d-flex align-items-center justify-content-center">
+        <div class="col-6 col-md-3 d-flex align-items-center justify-content-center">
             <a href="" class="text-center py-2">
                 <img class="img-fluid our_agents_logo" src="css/imgs/true homes.jpg">
             </a>
         </div>
-        <div class="col-md-3 d-flex align-items-center justify-content-center">
+        <div class="col-6 col-md-3 d-flex align-items-center justify-content-center">
             <a href="" class="text-center py-2">
                 <img class="img-fluid our_agents_logo" src="css/imgs/X1-OBrien.png">
             </a>
         </div>
-        <div class="col-md-3 d-flex align-items-center justify-content-center">
+        <div class="col-6 col-md-3 d-flex align-items-center justify-content-center">
             <a href="" class="text-center py-2">
                 <img class="img-fluid our_agents_logo" src="css/imgs/agent2.png">
             </a>
