Worked on the carousels

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                                 <button class="btn form-control bg-light">RENT</button>
                             </div>
                         </div>
-                        <div class="row w-50 m-auto text-white" id="selection-indicator">
+                        <div class="row w-50 m-auto text-white hidden" id="selection-indicator">
                             <div class="col-4">
                                 T
                             </div>
@@ -76,7 +76,7 @@
                                 T
                             </div>
                         </div>
-                        <div class="row">
+                        <div class="row hidden">
                             <div class="col">
                                 <input type="text" name="search-box" class="form-control p-0" id="">
                             </div>
@@ -130,7 +130,7 @@
                         <div class="carousel-item active">
                             <div class="row">
                                 <div class="col-md-4">
-                                    <img class="d-block w-60" src="./css/imgs/Semi-detached  Bungalow.jpg" alt="First slide">
+                                    <img class="d-block img-fluid" src="./css/imgs/Semi-detached  Bungalow.jpg" alt="First slide">
                                     <div class="carousel-caption">
                                         <p>Price: #2000.00</p>
                                     </div>
@@ -144,7 +144,7 @@
                                     </div>
                                 </div>
                                 <div class="col-md-4 hidden">
-                                    <img class="d-block w-60" src="./css/imgs/Semi-detached  Bungalow.jpg" alt="First slide">
+                                    <img class="d-block img-fluid" src="./css/imgs/Semi-detached  Bungalow.jpg" alt="First slide">
                                     <div class="carousel-caption d-none d-md-block">
                                         <p>Price: #2000.00</p>
                                     </div>
@@ -158,7 +158,7 @@
                                     </div>
                                 </div>
                                 <div class="col-md-4 hidden">
-                                    <img class="d-block w-60" src="./css/imgs/Semi-detached  Bungalow.jpg" alt="First slide">
+                                    <img class="d-block img-fluid" src="./css/imgs/Semi-detached  Bungalow.jpg" alt="First slide">
                                     <div class="carousel-caption d-none d-md-block">
                                         <p>Price: #2000.00</p>
                                     </div>
@@ -176,7 +176,21 @@
                         <div class="carousel-item">
                             <div class="row">
                                 <div class="col-md-4">
-                                    <img class="d-block w-60" src="./css/imgs/Semi-detached  Bungalow.jpg" alt="First slide">
+                                    <img class="d-block img-fluid" src="./css/imgs/Semi-detached  Bungalow.jpg" alt="First slide">
+                                    <div class="carousel-caption">
+                                        <p>Price: #2000.00</p>
+                                    </div>
+                                    <div>
+                                        <p>Parcel of Land </p>
+                                        <p>For sale</p>
+                                        <i class="fa fa-bed"></i>
+                                        <i class="fa fa-bath"></i>
+                                        <i class="fa fa-toilet"></i>
+                                        <button class="btn btn-primary d-block">View Property</button>   
+                                    </div>
+                                </div>
+                                <div class="col-md-4 hidden">
+                                    <img class="d-block img-fluid" src="./css/imgs/Semi-detached  Bungalow.jpg" alt="First slide">
                                     <div class="carousel-caption d-none d-md-block">
                                         <p>Price: #2000.00</p>
                                     </div>
@@ -190,21 +204,7 @@
                                     </div>
                                 </div>
                                 <div class="col-md-4 hidden">
-                                    <img class="d-block w-60" src="./css/imgs/Semi-detached  Bungalow.jpg" alt="First slide">
-                                    <div class="carousel-caption d-none d-md-block">
-                                        <p>Price: #2000.00</p>
-                                    </div>
-                                    <div>
-                                        <p>Parcel of Land </p>
-                                        <p>For sale</p>
-                                        <i class="fa fa-bed"></i>
-                                        <i class="fa fa-bath"></i>
-                                        <i class="fa fa-toilet"></i>
-                                        <button class="btn btn-primary d-block">View Property</button>   
-                                    </div>
-                                </div>
-                                <div class="col-md-4 hidden">
-                                    <img class="d-block w-60" src="./css/imgs/Semi-detached  Bungalow.jpg" alt="First slide">
+                                    <img class="d-block img-fluid" src="./css/imgs/Semi-detached  Bungalow.jpg" alt="First slide">
                                     <div class="carousel-caption d-none d-md-block">
                                         <p>Price: #2000.00</p>
                                     </div>
@@ -221,7 +221,7 @@
                         </div>
                         <!-- <div class="carousel-item d-md-none active ">
                             <div class="col-md-4"></div>
-                            <img class="d-block w-60" src="./css/imgs/Semi-detached  Bungalow.jpg" alt="Second slide">
+                            <img class="d-block img-fluid" src="./css/imgs/Semi-detached  Bungalow.jpg" alt="Second slide">
                             <div class="carousel-caption d-none d-md-block">
                             <p>Price: #4500.00</p>
                             </div>
@@ -235,7 +235,7 @@
                             </div>
                         </div>
                         <div class="carousel-item d-md-none">
-                            <img class="d-block w-60" src="./css/imgs/3 Bedroom Bungalow.jpg" alt="Third slide">
+                            <img class="d-block img-fluid" src="./css/imgs/3 Bedroom Bungalow.jpg" alt="Third slide">
                             <div class="carousel-caption d-none d-md-block">
                             <p>Price: #3000.00</p>
                             </div>
@@ -249,7 +249,7 @@
                             </div>
                         </div>
                         <div class="carousel-item d-md-none">
-                            <img class="d-block w-60" src="./css/imgs/4 Bedroom Bungalow.jpg" alt="Fouth slide">
+                            <img class="d-block img-fluid" src="./css/imgs/4 Bedroom Bungalow.jpg" alt="Fouth slide">
                             <div class="carousel-caption d-none d-md-block">
                             <p>Price: #1500.00</p>
                             </div>
