Added four pictures of the sample lands used in the design

--- a/index.html
+++ b/index.html
@@ -19,11 +19,15 @@
         
         <div class="collapse navbar-collapse" id="navbarToggler">
             <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">For Sale</a>
+            <li class="nav-item">
+                <select class="select mt-2">
+                    <option>For Sale</option>
+                    <option><a  href="./houses4sale.html"></a>Houses</option>
+                    <option><a  href="./lands4sale.html"></a>Lands</option>
+                </select>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">For Rent</a>
+                <a class="nav-link" href="f-rent.html">For Rent</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Short let</a>
