--- a/f-sale.html
+++ b/f-sale.html
@@ -87,10 +87,10 @@
                                 <a href="#"><i class="fab fa-facebook-messenger"></i></a>
                             </li>
                             <li>
-                                <a href="#"></a><i class="fa fa-envelope"></i></a>
+                                <a href="#"><i class="fa fa-envelope"></i></a>
                             </li>
                             <li>
-                                <a href="#"></a><i class="fa fa-phone-alt"></i></a>
+                                <a href="#"><i class="fa fa-phone-alt"></i></a>
                             </li>
                         </ul>
                     </div>
