modified pages to be dynamic and added api calls

--- a/index.html
+++ b/index.html
@@ -336,6 +336,7 @@
     <script src="js/nav-and-footer.js"></script>
     <script src="./js/jquery-3.4.1.js"></script>
     <script src="./js/bootstrap.js"></script>
+    <script src="js/routes/routes.js"></script>
     <script src="./js/main.js"></script>
 </body>
 </html>
