--- a/for_rent.html
+++ b/for_rent.html
@@ -40,21 +40,7 @@
         </section>
         <section class="properties py-5">
             <div class="property__container container-fluid my-2">
-                <div class="row property">
-                    <div class="col-md-3 d-flex justify-content-center align-items-center">
-                        <img src="css/imgs/3 Bedroom Bungalow.jpg" alt="" class="img-fluid">
-                    </div>
-                    <div class="col-md-9 property-description">
-                        <div>Price : <span id="price"></span></div>
-                        <div class="description">5 bedroom duplex</div>
-                        <div class="location">After white house Obinze</div>
-                        <div class="row">
-                            <span class="col social"><a href="#"><i class="fab fa-facebook-messenger"></i></a></span>
-                            <span class="col social"><a href="#"><i class="fa fa-envelope"></i></a></span>
-                            <span class="col social"><a href="#"><i class="fa fa-phone-alt"></i></a></span>
-                        </div>
-                    </div>
-                </div>
+                
             </div>
         </section>
     </main>
@@ -63,6 +49,7 @@
 <script src="js/nav-and-footer.js"></script>
 <script src="js/jquery-3.4.1.js"></script>
 <script src="js/bootstrap.js"></script>
-<script src="js/for_sale.js"></script>
+<script src="js/routes/routes.js"></script>
+<script src="js/for_rent.js"></script>
 </body>
 </html>
