--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Perfect Property | Home</title>
-    <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/fontawesome-free-5.10.1-web/css/all.css">
-    <link rel="stylesheet" href="./css/bootstrap.css">
-    <link rel="stylesheet" href="./css/main.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
+<title>Perfect Property | Home</title>
+<link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="./css/fontawesome-free-5.10.1-web/css/all.css">
+<link rel="stylesheet" href="./css/bootstrap.css">
+<link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -39,10 +39,10 @@
                 <a class="nav-link btn-action my-1 text-center my-md-0" href="#">Post a property <span class="highlight p-1"> FREE </span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link btn-action my-1 text-center my-md-0" href="#">Login</a>
+                <a class="nav-link btn-action my-1 text-center my-md-0" href="login.html">Login</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link btn-action my-1 text-center my-md-0" href="#">Sign Up</a>
+                <a class="nav-link btn-action my-1 text-center my-md-0" href="signup.html">Sign Up</a>
             </li>
             </ul>
         </div>
