modified css, login, signup, post_property

--- a/login.html
+++ b/login.html
@@ -28,7 +28,7 @@
                         <label for="inputPassword">Password</label>
                         <input type="password" class="form-control" id="inputPassword" placeholder="Password">
                     </div>
-                    <button type="submit" class="btn" style="background-color:  #5A2F2F; color: #ffffff">Login</button>
+                    <button type="submit" class="btn">Login</button>
                 </form>
                 <h6><a href="resetPassword.html"> Forgot password?</a></h6>
                 <p>You don't have an account yet? Click <a href="signup.html">here</a> to sign up.</p>
