--- a/signup.html
+++ b/signup.html
@@ -41,7 +41,7 @@
                             <label for="inputPassword">Password</label>
                             <input type="password" class="form-control" id="inputPassword" placeholder="Password">
                         </div>
-                        <button type="submit" class="btn" style="background-color:  #5A2F2F; color: #ffffff">Sign up</button>
+                        <button type="submit" class="btn" >Sign up</button>
                     </form>
                     <p>You already have an account? Click <a href="login.html">here</a> to log in.</p>
                 </div>
