--- a/post_property.html
+++ b/post_property.html
@@ -56,7 +56,7 @@
                 <title>Upload multiple files of your property</title>
                 <input type="file" name="name" multiple><br><br>
                 After uploading multiple files of your property, click submit.<br>
-                <input type="submit" value="Submit" style="border-radius: 5px; background-color: #5A2F2F; color: #ffffff; padding: 2px 10px;">
+                <input  class="btn" type="submit" value="Submit">
                 
             <!-- </div> -->
         </form>
