admin-dashboard.html

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </div>
     <!-- </div> -->
     </section>
-    <section class="container">
+    <section class="container-fluid">
         <div class="row">
             <div class="col" id="prop">
                 <h5 class="text-center">Featured Properties</h5>
@@ -333,10 +333,10 @@
 </div>
 <div id="footer"></div>
 
-    <script src="js/nav-and-footer.js"></script>
-    <script src="./js/jquery-3.4.1.js"></script>
-    <script src="./js/bootstrap.js"></script>
-    <script src="js/routes/routes.js"></script>
-    <script src="./js/main.js"></script>
+<script src="./js/jquery-3.4.1.js"></script>
+<script src="./js/bootstrap.js"></script>
+<script src="js/routes/routes.js"></script>
+<script src="./js/main.js"></script>
+<script src="js/nav-and-footer.js"></script>
 </body>
 </html>
