--- a/login.html
+++ b/login.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Perfect Property | Home</title>
+    <title>Perfect Property | Login</title>
     <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/fontawesome-free-5.10.1-web/css/all.css">
     <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="./css/main.css">
+    <script>let active = 'active';</script>
 </head>
 <body>
     <div id="nav"></div>
@@ -18,17 +19,17 @@
         </div>
         <div class="row justify-content-center align-content-center m-auto">
             <div class="col-md-5 login__container p-5">
-                <form action="POST">
+                <form method="POST">
                     <div class="form-group">
                         <label for="inputEmail">Email Address</label>
-                        <input type="email" class="form-control" id="email" aria-describedby="email" placeholder="Enter Email Address">
+                        <input type="email" class="form-control" id="email" aria-describedby="email" placeholder="Enter Email Address" name="email">
                         <small id="emailHelp" class="form-text text-white">We'll not share your email with anyone else.</small>
                     </div>
                     <div class="form-group">
                         <label for="inputPassword">Password</label>
-                        <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+                        <input type="password" class="form-control" id="inputPassword" placeholder="Password" name="password">
                     </div>
-                    <button type="submit" class="btn" style="background-color:  #5A2F2F; color: #ffffff">Login</button>
+                    <button type="submit" class="btn form-control" style="background-color:  #5A2F2F; color: #ffffff" name="login">Login</button>
                 </form>
                 <h6><a href="resetPassword.html"> Forgot password?</a></h6>
                 <p>You don't have an account yet? Click <a href="signup.html">here</a> to sign up.</p>
