--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                         <i class="fa fa-bed"></i>
                                         <i class="fa fa-bath"></i>
                                         <i class="fa fa-toilet"></i>
-                                        <button class="btn btn-primary d-block">View Property</button>   
+                                        <button class="btn btn-action d-block">View Property</button>   
                                     </div>
                                 </div>
                                 <div class="col-md-4 hidden">
@@ -123,7 +123,7 @@
                                         <i class="fa fa-bed"></i>
                                         <i class="fa fa-bath"></i>
                                         <i class="fa fa-toilet"></i>
-                                        <button class="btn btn-primary d-block">View Property</button>   
+                                        <button class="btn btn-action d-block">View Property</button>   
                                     </div>
                                 </div>
                                 <div class="col-md-4 hidden">
@@ -137,7 +137,7 @@
                                         <i class="fa fa-bed"></i>
                                         <i class="fa fa-bath"></i>
                                         <i class="fa fa-toilet"></i>
-                                        <button class="btn btn-primary d-block">View Property</button>   
+                                        <button class="btn btn-action d-block">View Property</button>   
                                     </div>
                                 </div>
                             </div>
@@ -155,7 +155,7 @@
                                         <i class="fa fa-bed"></i>
                                         <i class="fa fa-bath"></i>
                                         <i class="fa fa-toilet"></i>
-                                        <button class="btn btn-primary d-block">View Property</button>   
+                                        <button class="btn btn-action d-block">View Property</button>   
                                     </div>
                                 </div>
                                 <div class="col-md-4 hidden">
@@ -169,7 +169,7 @@
                                         <i class="fa fa-bed"></i>
                                         <i class="fa fa-bath"></i>
                                         <i class="fa fa-toilet"></i>
-                                        <button class="btn btn-primary d-block">View Property</button>   
+                                        <button class="btn btn-action d-block">View Property</button>   
                                     </div>
                                 </div>
                                 <div class="col-md-4 hidden">
@@ -183,7 +183,7 @@
                                         <i class="fa fa-bed"></i>
                                         <i class="fa fa-bath"></i>
                                         <i class="fa fa-toilet"></i>
-                                        <button class="btn btn-primary d-block">View Property</button>   
+                                        <button class="btn btn-action d-block">View Property</button>   
                                     </div>
                                 </div>
                             </div>
@@ -200,7 +200,7 @@
                                 <i class="fa fa-bed"></i>
                                 <i class="fa fa-bath"></i>
                                 <i class="fa fa-toilet"></i>
-                                <button class="btn btn-primary d-block">View Property</button>   
+                                <button class="btn btn-action d-block">View Property</button>   
                             </div>
                         </div>
                         <div class="carousel-item d-md-none">
@@ -214,7 +214,7 @@
                                 <i class="fa fa-bed"></i>
                                 <i class="fa fa-bath"></i>
                                 <i class="fa fa-toilet"></i>
-                                <button class="btn btn-primary d-block">View Property</button>   
+                                <button class="btn btn-action d-block">View Property</button>   
                             </div>
                         </div>
                         <div class="carousel-item d-md-none">
@@ -228,7 +228,7 @@
                                 <i class="fa fa-bed"></i>
                                 <i class="fa fa-bath"></i>
                                 <i class="fa fa-toilet"></i>
-                                <button class="btn btn-primary d-block">View Property</button>   
+                                <button class="btn btn-action d-block">View Property</button>   
                             </div>
                         </div> -->
                     </div>
@@ -251,7 +251,7 @@
                         <h5>Make A  Request</h5>
                         <p>Real estate agents will contact you as soon as they 
                             get a property that suit your specification</p>
-                            <button class="btn btn-primary d-block form-control">View</button>
+                            <button class="btn btn-action d-block form-control">View</button>
                     </div>
                 </div>
                 <div class="col-md-3 card m-2">
@@ -259,7 +259,7 @@
                         <span><i class="fa fa-search"></i></span>
                         <h5>Find A Real Estate Agent</h5>
                         <p>Find your next agent among our numerous partners</p>
-                        <button class="btn btn-primary d-block form-control">View</button>
+                        <button class="btn btn-action d-block form-control">View</button>
                     </div>
                 </div>
                 <div class="col-md-3 card m-2">
@@ -267,7 +267,7 @@
                         <span><i class="fa fa-newspaper"></i></span>
                         <h5>Weekly Newsletter</h5>
                         <p>Read the latest in property news on this blog</p>
-                        <button class="btn btn-primary d-block form-control">View</button>
+                        <button class="btn btn-action d-block form-control">View</button>
                     </div>
                 </div>
             </div>
@@ -327,7 +327,7 @@
                 By partnering with us, you are already securing a lifelong investment.<br>
                     Join our community today to provide comfortable homes and accommodation.
             </p>
-            <button id="button">Join Us</button><br>
+            <button id="button" class="btn-action btn">Join Us</button><br>
         </div>
     </div>
 </div>
