--- a/post_property.html
+++ b/post_property.html
@@ -13,7 +13,7 @@
 <body>
     <div id="nav"></div>
     <div class="container py-5">
-        <form action="METHOD">
+        <form action="">
             <div class="row">
                 <div class="col-md-5 justify-content-center align-content-center">
                     <div class="indiv">
@@ -57,9 +57,9 @@
                 <input type="file" name="name" multiple><br><br>
                 After uploading multiple files of your property, click submit.<br>
                 <input  class="btn" type="submit" value="Submit">
-                
-            <!-- </div> -->
-        </form>
+            </div>
+            </form>
+        </div>
     </div>
     <div id="footer"></div>
 
