--- a/short_let.html
+++ b/short_let.html
@@ -38,15 +38,17 @@
                 </div>
             </form>
         </section>
-        <section class="properties py-5">
-            <div class="property__container container-fluid my-2">
+        <section class="properties py-5 row">
+            <div class="property__container container-fluid my-2 col-md-8">
                 
             </div>
+            <div class="col-md-4" id="sidebar"></div>
         </section>
     </main>
 <div id="footer"></div>
 
 <script src="js/nav-and-footer.js"></script>
+<script src="js/sidebar.js"></script>
 <script src="js/jquery-3.4.1.js"></script>
 <script src="js/bootstrap.js"></script>
 <script src="js/routes/routes.js"></script>
